<resources>
    <string name="app_name">HWealth</string>
    <string name="app_logo">HWealth logo</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="profile">Profile</string>
    <string name="health">Health</string>
    <string name="messages">Messages</string>
    <string name="email">Email</string>
    <string name="steps">Steps</string>
    <string name="create_steps">Create Steps</string>
    <string name="retrieve_steps">Retrieve Steps</string>
    <string name="dob">Date Of Birth</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="bmi">BMI</string>
    <string name="null_steps">0</string>
    <string name="email_add">hello@hotmail.com</string>
    <string name="gender">Gender</string>
    <string name="display_photo">Display Photo</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sample_dob">26–02–1967</string>
    <string name="sample_weight">67</string>
    <string name="sample_height">1.71</string>
    <string name="food_intake">Food Intake</string>
    <string name="food_name">Food Name</string>
    <string name="food_calories">Food Calories</string>
    <string name="food_type">Food Type</string>
    <string name="record_food">Record Food Intake</string>
    <string name="sample_bmi">21.4</string>
    <string name="nil">-</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="forget_password">Forget Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="change_password">Change Password</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="enter_security_code">Enter Security Code</string>
    <string name="confirm_security_code">Confirm Security Code</string>
    <string name="setup_two_FA">Setup 2FA</string>
    <string name="remove_two_FA">Remove 2FA</string>
    <string name="logout">Logout</string>
    <string name="six_digit_code">Enter Six Digit Code</string>
    <string name="six_digit_code_sample">123456</string>
    <string name="confirm_six_digit_code">Confirm Six Digit Code</string>


    <string-array name="food_type_array">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Supper</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
